// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tile/Generic Columns 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    aria-label="button"
    class="fd-tile"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fd-tile__header--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__content fd-tile__content--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
        
    <div
      class="fd-tile__footer fd-tile__footer--2-col"
    >
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
            
      <div
        class="fd-tile__section fddocs-tile-example-border"
      />
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Tile/Generic Layout 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    aria-label="button"
    class="fd-tile"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-border"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-border"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-border"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-border"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-border"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-border"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-border"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-border"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-border"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s fd-tile--double"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header fddocs-tile-example-border"
    >
      
            
      <div
        class="fd-tile__title"
      >
        .fd-tile__title
      </div>
      
            
      <div
        class="fd-tile__subtitle"
      >
        .fd-tile__subtitle
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tile__content fddocs-tile-example-border"
    >
      .fd-tile__content
    </div>
    
        
    <div
      class="fd-tile__footer fddocs-tile-example-border"
    >
      .fd-tile__footer
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Tile/Generic Sizes 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    aria-label="button"
    class="fd-tile"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header"
    />
    
        
    <div
      class="fd-tile__content"
    >
      11 x 11rem
    </div>
    
        
    <div
      class="fd-tile__footer"
    />
    
    
  </div>
  
    
  <div
    aria-label="button"
    class="fd-tile fd-tile--s"
    role="button"
    tabindex="0"
  >
    
        
    <div
      class="fd-tile__header"
    />
    
        
    <div
      class="fd-tile__content"
    >
      9.25 x 9.25rem
    </div>
    
        
    <div
      class="fd-tile__footer"
    />
    
    
  </div>
  

</div>
`;
